front: rolling-stock-editor: fix small bugs - show mass in tons by default - add z-index to input group - fix resistance coefficient inputs - round values in curve table

--- a/front/src/common/BootstrapSNCF/InputGroupSNCF.scss
+++ b/front/src/common/BootstrapSNCF/InputGroupSNCF.scss
@@ -13,6 +13,7 @@
   }
 }
 .input-group {
+  z-index: auto !important;
   .btn-sm {
     font-size: 0.8rem;
   }
